k8s/postgres-statefulset.yml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: postgres-statefulset
  namespace: kube-micro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      accessModes: ["ReadWriteOnece"]
      resources:
        requests:
          storage: 1Gi
